--- a/refs.bib
+++ b/refs.bib
@@ -3,6 +3,118 @@
 	url = {https://en.wikipedia.org/wiki/Intermediate_language},
 	year = {2015},
 }
+@online{r2esil,
+	author = {Radare2 Team},
+	title = {ESIL description},
+	year = {2015},
+	url = {https://github.com/radare/radare2book/blob/master/esil.md},
+}
+@online{r2esil-instruction-set,
+	author = {Radare2 Team},
+	title = {ESIL Instruction Set},
+	year = {2015},
+	url = {https://github.com/radare/radare2book/blob/master/esil.md#esil-instruction-set},
+}
+@online{r2gsoc2017,
+	author = {Radare2 Team},
+	title = {GSoC 2017},
+	year = {2017},
+	url = {http://radare.org/gsoc/2017},
+}
+@online{r2rsoc2017,
+	author = {Radare2 Team},
+	title = {RSoC 2017},
+	year = {2017},
+	url = {http://radare.org/rsoc/2017},
+}
+@online{r2gsoc2017ideas,
+	author = {Radare2 Team},
+	title = {GSoC 2017 Tasks},
+	year = {2017},
+	url = {http://radare.org/gsoc/2017/ideas.html},
+}
+@online{r2gsoc2017ideasgdb,
+	author = {Radare2 Team},
+	title = {GSoC 2017 Tasks - GDB server and protocol},
+	year = {2017},
+	url = {http://radare.org/gsoc/2017/ideas.html#title_2},
+}
+@online{r2gsoc2017ideaswindows,
+	author = {Radare2 Team},
+	title = {GSoC 2017 Tasks - Windows platform support},
+	year = {2017},
+	url = {http://radare.org/gsoc/2017/ideas.html#title_5},
+}
+@online{r2gsoc2017blog,
+	author = {Radare2 Team},
+	title = {GSoC 2017 accepted projects},
+	year = {2017},
+	url = {http://radare.today/posts/gsoc_2017_selection/},
+}
+@online{r2gdbmigration,
+	author = {Radare2 Team},
+	title = {Migration from IDA Pro, GDB or WinDbg},
+	year = {2017},
+	url = {https://github.com/radare/radare2/wiki/Migration-from-ida,-GDB-or-WinDBG},
+}
+@online{r2bookdisasm,
+	author = {Radare Team},
+	title = {R2 Book - Disassembly},
+	year = {2017},
+	url = {https://radare.gitbooks.io/radare2book/content/disassembling/intro.html},
+}
+@online{r2bookdebug,
+	author = {Radare Team},
+	title = {R2 Book - Debugger},
+	year = {2017},
+	url = {https://radare.gitbooks.io/radare2book/content/debugger/intro.html},
+}
+@online{r2bookwrite,
+	author = {Radare Team},
+	title = {R2 Book - Basic Commands - Write},
+	year = {2017},
+	url = {https://radare.gitbooks.io/radare2book/content/basic_commands/write.html},
+}
+@online{r2booksearch,
+	author = {Radare Team},
+	title = {R2 Book - Searching},
+	year = {2017},
+	url = {https://radare.gitbooks.io/radare2book/content/search_bytes/intro.html},
+}
+@online{r2bookscript,
+	author = {Radare Team},
+	title = {R2 Book - Scripting},
+	year = {2017},
+	url = {https://radare.gitbooks.io/radare2book/content/scripting/intro.html},
+}
+@online{r2windbg,
+	author = {Radare2 Team},
+	title = {WinDbg protocol parser},
+	year = {2015},
+	url = {https://github.com/radare/radare2/blob/master/shlr/windbg},
+}
+@online{r2pipe,
+	author = {Radare2 Team},
+	title = {R2pipe repository},
+	year = {2015},
+	url = {https://github.com/radare/radare2-r2pipe},
+}
+@online{frida,
+	title = {Frida},
+	url = {http://frida.re},
+	year = {2015},
+}
+@online{r2frida,
+	title = {r2frida},
+	url = {https://github.com/NowSecure/r2frida},
+	year = {2016},
+}
+@online{r2angr,
+	author = {Radare2 Team},
+	title = {r2angr},
+	year = {2017},
+	url = {https://github.com/radare/radare2-extras/blob/master/r2angr},
+}
 @misc{ida-ipython,
 	author = {james91b},
 	title = {An IDA Pro plugin for embedding IPython kernel},
