Add contacts slide

--- a/slides_en.tex
+++ b/slides_en.tex
@@ -208,6 +208,8 @@
 
 \begin{frame}[fragile]
   \frametitle{Basic patching\footfullcite{r2bookwrite}}
+  There are many searching options (see \alert{/?} output),
+  including ROP gadgets search (\alert{/R})
   \begin{itemize}
 	  \item Add \textbf{"-w"} option to radare2 to open in write mode
 	  \item Or reopen it using \alert{oo+} command
@@ -582,6 +584,19 @@
 	  \item \alert{afl} - list all functions recognized by angr
 	  \item Can be extended - see \textbf{radare2-extras/r2angr/} directory\footfullcite{r2angr}
 	% reference to the asciinema?
+  \end{itemize}
+\end{frame}
+
+\section{Contact us}
+
+\begin{frame}[fragile]
+  \frametitle{Contacts}
+  \begin{itemize}
+	  \item Main site: http://rada.re
+	  \item Blog: http://radare.today
+	  \item Twitter: \textbf{\href{https://twitter.com/radareorg}{\@radareorg}}
+	  \item IRC on Freenode: \textbf{\#radare}
+	  \item Telegram: \textbf{\href{https://telegram.me/joinchat/ACR-FkEK2owJSzMUYjt_NQ}{\#radare}}
   \end{itemize}
 \end{frame}
 
